k8s/dns-spoof-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-spoof
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-spoof
  template:
    metadata:
      labels:
        app: dns-spoof
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-conf
              mountPath: /usr/share/nginx/html/dns-poison.html
              subPath: dns-poison.html
      volumes:
        - name: nginx-conf
          configMap:
            name: dns-spoof-nginx-conf
