k8s/captive-portal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: captive-portal
  namespace: default
spec:
  selector:
    app: captive-portal
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: backend
      port: 8080
      targetPort: 8080
