k8s/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: default
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 80
