k8s/dns-spoof-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-spoof
  namespace: default
spec:
  selector:
    app: dns-spoof
  ports:
    - port: 80
      targetPort: 80
