k8s/dns-spoof-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-spoof
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: rafex.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-spoof
                port:
                  number: 80
    - host: www.rafex.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-spoof
                port:
                  number: 80
